--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,3 +19,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: Generated Debug Artifacts
+        path: |
+          target/debug
+          
