Remove unneeded parts

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,4 +25,9 @@ jobs:
         name: Generated Debug Artifacts
         path: |
           target/debug
+          !target/debug/.fingerprint
+          !target/debug/build
+          !target/debug/deps
+          !target/debug/examples
+          !target/debug/incremental
           
