--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,10 +19,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Archive production artifacts
+    - name: Upload VST (debug artifacts)
       uses: actions/upload-artifact@v3
       with:
-        name: Generated Debug Artifacts
+        name: VST Plug-In (Windows / Linux)
         path: |
           target/debug
           !target/debug/.fingerprint
