--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Upload VST (debug artifacts)
       uses: actions/upload-artifact@v3
       with:
-        name: VST Plug-In (Windows / Linux)
+        name: VST Plug-In (Windows and Linux)
         path: |
           target/debug
           !target/debug/.fingerprint
